[gd_scene load_steps=13 format=3 uid="uid://bo4tsovfpcplu"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_w8351"]
[ext_resource type="Texture2D" uid="uid://xwpvym5knfpb" path="res://assets/3d_models/character/player_arm_steve_arm.png" id="2_t6lt0"]
[ext_resource type="Texture2D" uid="uid://cirt7vnfn3fd7" path="res://assets/img/hud/crosshair.png" id="3_ogax1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tmfmv"]
resource_name = "skin"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_t6lt0")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_dgadm"]
_surfaces = [{
"aabb": AABB(-0.630433, -0.811872, -0.24, 0.450491, 1.62374, 0.48001),
"format": 4097,
"index_count": 24,
"index_data": PackedByteArray(5, 0, 2, 0, 6, 0, 5, 0, 0, 0, 2, 0, 1, 0, 5, 0, 4, 0, 1, 0, 0, 0, 5, 0, 4, 0, 6, 0, 7, 0, 4, 0, 5, 0, 6, 0, 6, 0, 3, 0, 7, 0, 6, 0, 2, 0, 3, 0),
"name": "skin",
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(18, 100, 33, 191, 216, 214, 79, 191, 144, 194, 117, 62, 18, 100, 33, 191, 216, 214, 79, 191, 144, 194, 117, 190, 18, 100, 33, 191, 232, 214, 79, 63, 144, 194, 117, 62, 18, 100, 33, 191, 232, 214, 79, 63, 144, 194, 117, 190, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 190, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 62, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 62, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 190)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3gtpw"]
resource_name = "player_arm_Cube002"
_surfaces = [{
"aabb": AABB(-0.630433, -0.811872, -0.24, 0.450491, 1.62374, 0.48001),
"attribute_data": PackedByteArray(26, 51, 0, 63, 0, 184, 170, 57, 10, 228, 128, 62, 203, 107, 127, 63, 26, 51, 0, 63, 252, 103, 127, 62, 10, 228, 128, 62, 50, 51, 128, 62, 242, 189, 255, 62, 0, 58, 5, 59, 242, 189, 255, 62, 48, 52, 127, 62, 72, 231, 63, 63, 252, 103, 127, 62, 102, 211, 63, 63, 168, 202, 127, 63, 72, 231, 63, 63, 0, 184, 170, 57, 71, 156, 255, 62, 203, 107, 127, 63, 142, 58, 0, 63, 168, 202, 127, 63, 53, 156, 255, 62, 50, 51, 128, 62, 42, 207, 128, 62, 0, 58, 5, 59, 244, 83, 0, 63, 72, 205, 127, 62, 42, 207, 128, 62, 48, 52, 127, 62, 204, 236, 63, 63, 72, 205, 127, 62),
"format": 4119,
"index_count": 24,
"index_data": PackedByteArray(9, 0, 3, 0, 11, 0, 9, 0, 1, 0, 3, 0, 2, 0, 8, 0, 6, 0, 2, 0, 0, 0, 8, 0, 7, 0, 13, 0, 15, 0, 7, 0, 10, 0, 13, 0, 12, 0, 5, 0, 14, 0, 12, 0, 4, 0, 5, 0),
"material": SubResource("StandardMaterial3D_tmfmv"),
"name": "skin",
"primitive": 3,
"vertex_count": 16,
"vertex_data": PackedByteArray(18, 100, 33, 191, 216, 214, 79, 191, 144, 194, 117, 62, 255, 127, 0, 0, 255, 255, 255, 191, 18, 100, 33, 191, 216, 214, 79, 191, 144, 194, 117, 62, 255, 127, 255, 127, 255, 255, 255, 191, 18, 100, 33, 191, 216, 214, 79, 191, 144, 194, 117, 190, 255, 127, 0, 0, 255, 255, 255, 191, 18, 100, 33, 191, 232, 214, 79, 63, 144, 194, 117, 62, 255, 127, 255, 127, 255, 255, 255, 191, 18, 100, 33, 191, 232, 214, 79, 63, 144, 194, 117, 62, 255, 127, 255, 255, 0, 0, 255, 191, 18, 100, 33, 191, 232, 214, 79, 63, 144, 194, 117, 190, 255, 127, 255, 255, 0, 0, 255, 191, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 190, 255, 127, 0, 0, 255, 255, 255, 191, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 190, 255, 255, 255, 127, 255, 255, 255, 255, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 62, 255, 127, 0, 0, 255, 255, 255, 191, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 62, 255, 127, 255, 127, 255, 255, 255, 191, 180, 66, 56, 190, 216, 214, 79, 191, 144, 194, 117, 62, 255, 255, 255, 127, 255, 255, 255, 255, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 62, 255, 127, 255, 127, 255, 255, 255, 191, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 62, 255, 127, 255, 255, 0, 0, 255, 191, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 62, 255, 255, 255, 127, 255, 255, 255, 255, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 190, 255, 127, 255, 255, 0, 0, 255, 191, 180, 66, 56, 190, 232, 214, 79, 63, 144, 194, 117, 190, 255, 255, 255, 127, 255, 255, 255, 255)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_dgadm")

[sub_resource type="Animation" id="Animation_alftd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_arm/arms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.226454, 2.13123, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_arm/arms:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.965795, -2.70379, 2.64704)]
}

[sub_resource type="Animation" id="Animation_8mi61"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_arm/arms:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.226454, 2.13123, 0.6)]
}

[sub_resource type="Animation" id="Animation_3xvo1"]
resource_name = "walk_movement"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_arm/arms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.226454, 2.13123, 0.6), Vector3(-0.393278, 1.90881, 0.6), Vector3(-0.226454, 2.13123, 0.6)]
}

[sub_resource type="Animation" id="Animation_i8vir"]
resource_name = "interact"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_arm/arms:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector3(-0.226454, 2.13123, 0.6), Vector3(0.40164, 2.05426, 1.80365), Vector3(-0.226454, 2.13123, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_arm/arms:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector3(-0.965795, -2.70379, 2.64704), Vector3(-0.965795, -2.17603, 2.64704), Vector3(-0.965795, -2.70379, 2.64704)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtg3a"]
_data = {
"RESET": SubResource("Animation_alftd"),
"idle": SubResource("Animation_8mi61"),
"interact": SubResource("Animation_i8vir"),
"walk_movement": SubResource("Animation_3xvo1")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_eklkq"]
margin = 0.0
height = 1.9
radius = 0.4

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_w8351")

[node name="Timers" type="Node" parent="."]

[node name="jump_cd" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75154, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
current = true

[node name="range_raycast" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -5)
debug_shape_custom_color = Color(1, 0.211765, 0.894118, 1)

[node name="player_arm" type="Node3D" parent="Head"]
transform = Transform3D(-0.2, 0, -3.01992e-08, 0, 0.2, 0, 3.01992e-08, 0, -0.2, 0.118294, -0.66, -0.142763)

[node name="arms" type="MeshInstance3D" parent="Head/player_arm"]
transform = Transform3D(0.962673, 0.122954, -0.241129, 0.269958, -0.500614, 0.822501, -0.0195828, -0.856894, -0.51512, -0.226454, 2.13123, 0.6)
cast_shadow = 0
mesh = SubResource("ArrayMesh_3gtpw")
skeleton = NodePath("")

[node name="Arm_AnimationPlayer" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_vtg3a")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.95, 0)
shape = SubResource("CylinderShape3D_eklkq")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ogax1")
expand_mode = 4

[node name="Label" type="Label" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timers/jump_cd" to="." method="_on_jump_cd_timeout"]
